# posenet-tf

./: .gitignore  Jenkinsfile  README.md  data.json  requirements.txt  setup.cfg  tox.ini
docker/: Dockerfile.dev  Dockerfile.tests
docker/jupyter/: jupyter_notebook_config.py  run_jupyter.sh
docs/: Makefile  conf.py  index.rst  make.bat
etc/: config.yaml  demo-config.yaml
posenetclas/: api.py  config.py  data_utils.py  decode.py  decode_multi.py  image_demo.py  label_wav.py  model.py  model_utils.py  paths.py  test.py  test_utils.py  utils.py
posenetclas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
posenetclas/converter/: tfjs2python.py  wget.py
posenetclas/tests/: main.py
