[metadata]
name = posenetclas
summary = This is a plug-and-play tool to predict human poses in images.
author = Lara Lloret (CSIC)
author-email = lloret@ifca.unican.es
version = 0.1.0
license = Apache
home-page = http://github.com/deephdc/posenet-tf
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    posenetclas

[entry_points]
deepaas.v2.model =
    posenetclas = posenetclas.api

